<resources>
    <string name="app_name">App_Deepanshu</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Login">login</string>
    <string name="not_regis">not_registered</string>
    <string name="not_registered">not_registered</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="no_registered">Not Registered</string>
    <string name="Adhaar">Adhaar number</string>
    <string name="Password">Password</string>
    <string name="Not_registered">Not Registered ?</string>
    <string name="Not_register">Not Registered?</string>
    <string name="or">--------------------or--------------------</string>
    <string name="Or">----------------------------------Or-----------------------------------</string>
    <string name="oor">--------------------------------Or---------------------------------</string>
    <string name="orr">Or</string>
    <string name="Updater">Updater/Admin</string>
    <string name="submit">Submit</string>
    <string name="cnf_Password">Confirm Password</string>
    <string name="mobile">Mobile No.</string>
    <string name="email">E-Mail</string>
    <string name="village">Village</string>
    <string name="city">City</string>
    <string name="village_town_city">Village/Town/city</string>
    <string name="state">State</string>
    <string name="Health">स्वास्थ्य</string>
    <string name="Education">शिक्षा और विकास</string>
    <string name="head">स्वास्थ्य और शिक्षा- सारथी</string>
    <string name="appname">Spinner Example</string>
    <string name="app_title">Health and Education App</string>
    <string name="health_first_btn">Health</string>
    <string name="Eduction">Education</string>
    <string name="main_people">Main Officers</string>
    <string name="changelang">Choose Language</string>
    <string name="welcome">Welcome</string>
    <string name="select_type">Select your cateogry</string>
    <string name="school">School</string>
    <string name="schl_login">Login as a School</string>
    <string name="teach">Teacher</string>
    <string name="teach_log">Login as a Teacher</string>
    <string name="student">Student</string>
    <string name="stud_login">Login as a Student</string>
    <string name="parent">Parents</string>
    <string name="parent_log">Login as a Parent</string>
    <string name="patient">Patient</string>
    <string name="patient_log">Login as a Patient</string>
    <string name="donor">Donor</string>
    <string name="log_donor">Login as a Donor</string>
    <string name="doctor">Doctor</string>
    <string name="log_doc">Login as a Doctor</string>
    <string name="collector">Collector</string>
    <string name="sarpanch">Sarpanch</string>
    <string name="deo">District Education Officer</string>
    <string name="cmho">Chief Medical Health Officer</string>
    <string name="Name">Enter Name</string>
    <string name="guardian">Enter Father Name</string>
    <string name="Adhaar_no">Enter Adhaar Number</string>
    <string name="batch">Enter Batch</string>
    <string name="add_btn">Add Student</string>
    <string name="back">Back</string>
    <string name="submit_btn">Submit</string>
    <string name="OR">Or</string>
    <string name="Reg">Register</string>
    <string name="pass">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="cnf_pass">Confirm Password</string>
    <string name="address">Full Address</string>
    <string name="states">State</string>
    <string name="available">Are you available at your office??</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="Log">Login</string>
    <string name="hos_name">Hospital Name</string>
    <string name="father_name">Father Name</string>
    <string name="Mobile">Mobile Number</string>
    <string name="schl_name">School Name</string>
    <string name="schl_key">Enter School Verify Key</string>
    <string name="adhaar_father">Enter Father Adhaar No.</string>
    <string name="cat_donor">Select Your Donor cateogry</string>
    <string name="Medicine">Medicines</string>
    <string name="blood">Blood</string>
    <string name="innovation">Innovation Portal</string>
    <string name="chat">Chat</string>
    <string name="new_idea">New Ideas</string>
    <string name="submit_ideas">New Ideas Submit</string>
    <string name="stem">Science, technology, engineering, and mathematics</string>
    <string name="parent_por">Parent Portal</string>
    <string name="stu_report">Your Ward Report</string>
    <string name="attn">Your Ward Attendence</string>
    <string name="feedback">School Feedback</string>
    <string name="contact">Teachers Contact</string>
    <string name="quiz">Quiz Portal</string>
    <string name="feed">Suggestion and Feedback Portal</string>
    <string name="sugg">Suggestion or Feedback</string>
    <string name="send">Send</string>
    <string name="hmp">School HeadMaster Portal</string>
    <string name="skgd">School Activities</string>
    <string name="schol_teachers">School Teachers</string>
    <string name="student_portal">Student Portal</string>
    <string name="assign">Assignment Portal</string>
    <string name="quiz_portal">Quiz Portal</string>
    <string name="notes">Notes Portal</string>
    <string name="feedback_stu">Feedback</string>
    <string name="vedio">Vedios</string>
    <string name="gsas">Government Scholarship and Schemes</string>
    <string name="activities">Other Co-Curricular Activities</string>
    <string name="edu_work">Educational Work-Load</string>
    <string name="self_teach">Enter Self Teaching Record</string>
    <string name="self_tch">Self Teaching Record</string>
    <string name="subject">Enter Subjects</string>
    <string name="verify">Verify</string>
    <string name="board">Board of school</string>
    <string name="Generate_key">Generate Teacher Verify Key</string>
    <string name="verify_key">Enter Verify Key</string>
    <string name="que1">Does the teacher come well prepared in the classroom?</string>
    <string name="que2">Do teachers provide interesting and important information in the classroom?</string>
    <string name="que3">Does the teacher explain the subject well?</string>
    <string name="que4">Is the communication skills of the teacher good or not?</string>
    <string name="que5">Does the teacher force you to tuition?</string>
    <string name="que6">Whether the teacher is able to answer the children\'s questions with full confidence or not?</string>
    <string name="que7">Is the teacher able to generate interest in the subject or not?</string>
    <string name="que8">Is the teacher available after the class to tell the questions related to your study or not?</string>
    <string name="que9">Does the teacher tell you the importance and practical application of the subject or not?</string>
    <string name="que10">Does the teacher teach you moral knowledge or not?</string>
    <string name="teach_feed">Teacher\'s Feedback Form</string>
    <string name="Date">Enter Date</string>
    <string name="Notice">Enter Activity Notice For Students</string>
    <string name="venue">Enter Venue Of Activity</string>
    <string name="teachs">Teacher Co-ordinator and Contact No.</string>
    <string name="studs">Students Co-Ordinator of Activity</string>
    <string name="activity">Activities For Students</string>
    <string name="name">Teacher Name</string>
    <string name="mobilee">Mobile ::</string>
    <string name="emall">E-Mail ::</string>
    <string name="naam">Name ::</string>
    <string name="adhaark">Aadhar ::</string>
    <string name="Add">Address ::</string>
    <string name="stated">State ::</string>
    <string name="Title">Title Of Scheme::</string>
    <string name="cat">Cateogry::</string>
    <string name="Type">Type Of Scholarship:</string>
    <string name="cateogry">Cateogry::</string>
    <string name="gender">Gender::</string>
    <string name="level">Level::</string>
    <string name="Beneficiary">Beneficiary::</string>
    <string name="org">Organization::</string>
    <string name="title">Title of ScholarShip</string>
    <string name="about">About ScholarShip::</string>
    <string name="desc">Description Of ScholarShip::</string>
    <string name="Link">Link Of Scholarship::</string>
    <string name="sub">Subject::</string>
    <string name="cls">Class::</string>
    <string name="stm">Stream::</string>
    <string name="batchs">Batch::</string>
    <string name="clas">Enter Class</string>
    <string name="subjects">Subject</string>
    <string name="teachsr">Teacher Name</string>
    <string name="validity">Validity</string>
    <string name="total">Total Classes held in school</string>
    <string name="attend">Classes Attended by Student</string>
    <string name="exam">Exam Name</string>
    <string name="marks">Marks in Exam and Out of</string>
    <string name="sugges">Suggestion to the parents</string>
    <string name="names">Name ::</string>
    <string name="date">Date::</string>
    <string name="behaviour">Behaviour::</string>
    <string name="suggs">Suggestion::</string>
    <string name="section">Enter Batch</string>
    <string name="district">District</string>
    <string name="prb_title">Problem Title</string>
    <string name="prb_desc">Problem Description</string>
    <string name="sol_title">Solution Title</string>
    <string name="sol_desc">Solution Description</string>
    <string name="tech">Technology Used</string>
    <string name="desig">Designation</string>
    <string name="titles">Title Of CSR</string>
    <string name="descs">Description Of Problem</string>
    <string name="place">Location of Requirement</string>
    <string name="csr">CSR Activities Upload</string>
    <string name="date1">Enter Date(YYYY-MM-DD)(2020-01-18)</string>
    <string name="year">Year(YYYY)</string>
    <string name="month">Month(MM)</string>
    <string name="day">Day(DD)</string>
    <string name="Dates">Enter Date *format restricted</string>
    <string name="techs">Technique</string>
    <string name="techss">Technique::</string>
    <string name="prob">Problem Title::</string>
    <string name="sol">Solution Title::</string>
    <string name="Notices">NOTICE</string>
    <string name="venues">VENUE</string>
    <string name="query">For Queries Contact to:-</string>
    <string name="techer">Teachers Co-Ordinator</string>
    <string name="students">Student\'s Co-Ordinator</string>
    <string name="schools">School ::</string>
    <string name="districts">District::</string>
    <string name="Technique">Technology ::</string>
    <string name="problem">Problem Title</string>
    <string name="probdesc">Problem Description</string>
    <string-array name="stream">
        <item>संकाय चुने </item>
        <item>गणित </item>
        <item>कला </item>
        <item>जीवविज्ञान </item>
        <item>वाणिज्य </item>
        <item>कोई नहीं</item>
    </string-array>
    <string-array name="classes">
        <item>कक्षा</item>
        <item>कक्षा I</item>
        <item>कक्षा II</item>
        <item>कक्षा III</item>
        <item>कक्षा VI</item>
        <item>कक्षा V</item>
        <item>कक्षा VI</item>
        <item>कक्षा VII</item>
        <item>कक्षा VIII</item>
        <item>कक्षा IX</item>
        <item>कक्षा X</item>
        <item>कक्षा XI</item>
        <item>कक्षा XII</item>
    </string-array>
    <string-array name="spec">
        <item>विशिष्टता का चयन करें</item>
        <item>दिल</item>
        <item>आंखें </item>
        <item>त्वचा </item>
        <item>शल्य चिकित्सक </item>
        <item>आपातकालीन डॉक्टर </item>
        <item>कार्डियो </item>
    </string-array>
</resources>