<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Teacher_List_Activity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/name"
        android:textSize="28dp"/>
    <TextView
        android:id="@+id/teach_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/e_mail"
        android:textSize="28dp"/>
    <TextView
        android:id="@+id/teach_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/mobile"
        android:textSize="28dp"/>
    <TextView
        android:id="@+id/teach_mob"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/address"
        android:textSize="28dp"/>
    <TextView
        android:id="@+id/teach_add"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/state"
        android:textSize="28dp"/>
    <TextView
        android:id="@+id/teach_state"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        />


</LinearLayout>
</ScrollView>