<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

    tools:context=".patient_login"
        tools:ignore="ExtraText"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/main_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="127dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/patientlogo"/>
            <EditText
                android:id="@+id/edittext_adhaar"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:paddingRight="10dp"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:background="@drawable/button_shape"
                android:layout_marginTop="40dp"
                android:paddingLeft="10dp"
                android:hint="@string/e_mail"/>


            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/pass"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="350dp"

                android:paddingLeft="10dp"
                android:layout_height="40dp"
                android:textSize="16dp"
                android:background="@drawable/bg1"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:text="@string/Log"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#17AEEE"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/OR"/>
            </LinearLayout>
            <Button
                android:id="@+id/patient_reg"
                android:layout_width="350dp"
                android:paddingLeft="10dp"
                android:layout_height="40dp"
                android:textSize="17dp"
                android:background="@drawable/bg1"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/Reg"/>

        </LinearLayout>
    </ScrollView>