<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chauhan1"
    tools:context=".School_Activity_For_Students">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:gravity="center"
            android:background="@drawable/pencil"
            android:text="@string/activity"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#ffffff"
            android:layout_marginTop="20dp"
            android:hint="@string/Date"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_today_black_24dp"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:id="@+id/Notice"
                android:background="#ffffff"
                android:layout_marginTop="20dp"
                android:hint="@string/Notice"
                android:drawableLeft="@drawable/ic_assignment_black_24dp"
                android:paddingLeft="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#ffffff"
                android:id="@+id/Venue"
                android:layout_marginTop="20dp"
                android:hint="@string/venue"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/location"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="#ffffff"
                android:layout_marginTop="20dp"
                android:id="@+id/Teacher"
                android:hint="@string/teachs"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="#ffffff"
                android:id="@+id/Student"
                android:layout_marginTop="20dp"
                android:hint="@string/studs"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/save"
            android:text="@string/submit"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"/>
    </LinearLayout>

</ScrollView>